--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 :root {
 	--primary-color: #c7a17a;
-	--background-color: #929292;
+	--background-color: #f9f5f0;
 	--dark-color: #151515;
 }
 
@@ -72,7 +72,7 @@ html {
 
 .container-logo h1 a {
 	text-decoration: none;
-	color: #000000;
+	color: #000;
 	font-size: 3rem;
 	text-transform: uppercase;
 	letter-spacing: -1px;
@@ -238,51 +238,6 @@ html {
 	padding: 1rem 3rem;
 	text-transform: uppercase;
 	border-radius: 3rem;
-}
-
-
-/* ********************************** */
-/*               imagen wrapper       */
-/* ********************************** */
-* {
-	margin: 100;
-	padding: 100;
-	box-sizing: border-box;
-	font-family: Arial, sans-serif;
-}
-
-.contenedor {
-	justify-content: center;
-	min-height: 100vh;
-	background-color: #1dced4;
-	border: 3px solid #fff;
-}
-
-.wrapper {
-	float: left;
-	margin: 150px auto;
-	width: 70%;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-}
-
-.derecha {
-	max-width: 320px;
-	float: left;
-}
-
-.text-box {
-
-	color: #fff;
-}
-.text-box h2 {
-	font-size: 18px;
-	color: black;
-}
-
-.text-box p {
-    font-size: 12px;
 }
 
 /* ********************************** */
