--- a/styles.css
+++ b/styles.css
@@ -317,28 +317,38 @@ html {
 	gap: 2rem;
 }
 
-.category-moca {
+.Joya-1 {
 	background-image: linear-gradient(#00000080, #00000080),
-		url('img/moca-category.jpg');
-	background-size: cover;
-	background-position: bottom;
-	background-repeat: no-repeat;
+		url('product/10.jpg');
+	background-size: cover; /* Asegura que la imagen cubra todo el contenedor */
+	background-position: center; /* Centra la imagen */
+	background-repeat: no-repeat; /* Evita que la imagen se repita */
+	width: 100%; /* Asegúrate de que el ancho sea del 100% del contenedor */
+	height: 300px; /* Ajusta la altura según necesites */
+	border-radius: 10px; /* Opcional, para las esquinas redondeadas */
 }
 
-.category-capuchino {
+
+.Joya-2 {
 	background-image: linear-gradient(#00000080, #00000080),
-		url('img/capuchino-category.jpg');
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
+	url('product/11.jpg');
+background-size: cover; /* Asegura que la imagen cubra todo el contenedor */
+background-position: center; /* Centra la imagen */
+background-repeat: no-repeat; /* Evita que la imagen se repita */
+width: 100%; /* Asegúrate de que el ancho sea del 100% del contenedor */
+height: 300px; /* Ajusta la altura según necesites */
+border-radius: 10px; /* Opcional, para las esquinas redondeadas */
 }
 
-.category-expreso {
+.Joya-3 {
 	background-image: linear-gradient(#00000080, #00000080),
-		url('img/expreso-category.jpg');
-	background-size: cover;
-	background-position: center;
-	background-repeat: no-repeat;
+	url('product/12.jpg');
+background-size: cover; /* Asegura que la imagen cubra todo el contenedor */
+background-position: center; /* Centra la imagen */
+background-repeat: no-repeat; /* Evita que la imagen se repita */
+width: 100%; /* Asegúrate de que el ancho sea del 100% del contenedor */
+height: 300px; /* Ajusta la altura según necesites */
+border-radius: 10px; /* Opcional, para las esquinas redondeadas */
 }
 
 .card-category p {
